# phonet-old

./: .gitignore  .phoner  Cargo.toml  README.md  example.phn  example.phoner  old.phoner  old.rs  phoner  tokipona.phoner
examples/: esperanto.phonet  example.phonet  ivalingo.phoner  ivalingo.phonet  japanese.phonet  phoner  syntax.phoner  test.min.phoner  test.phoner  test.phonet  tokipona.phoner  tokipona.phonet
src/: args.rs  gen.rs  generate.rs  lib.rs  main.rs  parse.rs  run.rs  scheme.rs  tests.rs  types.rs
src/parse/: mod.rs  statements.rs
src/types/: error.rs  mod.rs
tests/: integration.rs
