[package]
name = "phoner"
version = "0.6.3"
edition = "2021"
description = "A CLI tool and library to validate phonotactic patterns for constructed languages"
license = "MIT"
documentation = "https://docs.rs/phoner/latest/phoner"
repository = "https://github.com/darccyy/phoner"
authors = ["darcy"]
keywords = ["phoner", "phone", "regex", "lang", "conlang"]
exclude = ["target", "examples/test.min.phoner"]

[dependencies]
clap = { version = "4.0.29", features = ["derive"] }
fancy-regex = "0.10.0"
rand = "0.8.5"
snafu = "0.7.3"
