[package]
name = "phonet"
version = "0.7.0"
edition = "2021"
description = "A CLI tool and library to validate phonotactic patterns for constructed languages"
license = "MIT"
documentation = "https://docs.rs/phonet/latest/phonet"
repository = "https://github.com/darccyy/phonet"
authors = ["darcy"]
keywords = ["phoner", "phone", "regex", "lang", "conlang"]
exclude = ["target", "examples/test.min.phonet"]

[dependencies]
clap = { version = "4.0.29", features = ["derive"] }
fancy-regex = "0.10.0"
rand = "0.8.5"
snafu = "0.7.3"
